--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "npx convex run seedData:seedEvents",
+    "clear": "npx convex run seedData:clearEvents"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
@@ -17,10 +19,13 @@
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
@@ -28,8 +33,10 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-scroll-parallax": "^3.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.180.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.3"
   },
