--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "convex": "^1.23.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-scroll-parallax": "^3.5.0",
+    "react-to-print": "^3.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "three": "^0.180.0",
